# study_timer

./: .gitignore  CMakeCache.txt.prev  CMakeLists.txt  README.md  Study-Scheduler  Timer.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  start-app-in-xpra  start-xpra  timer.cpp  timer.h  timer.ui  timerselection.cpp  timerselection.h  timerselection.ui  timerwidget.cpp  timerwidget.h  timerwidget.ui
.cmake/api/v1/reply/: cache-v2-99bb9d0ea1fec8ab56c8.json  cmakeFiles-v1-20de6895d87720dd6da5.json  codemodel-v2-d86b4a04b736d0bffbe9.json  index-2022-09-05T09-28-14-0652.json  target-Study-Scheduler-4fd8497f95af5ff9712f.json  target-Study-Scheduler_autogen-c3cd57d662cdb29f18cf.json
Study-Scheduler_autogen/: moc_predefs.h
Study-Scheduler_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_timerselection.cpp  moc_timerselection.cpp.d  moc_timerwidget.cpp.d
Study-Scheduler_autogen/include/: ui_mainwindow.h  ui_timerselection.h  ui_timerwidget.h
Timer-Qt_autogen/: mocs_compilation.cpp
Timer-Qt_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_timerselection.cpp.d  moc_timerwidget.cpp  moc_timerwidget.cpp.d
Timer-Qt_autogen/include/: ui_mainwindow.h  ui_timerselection.h  ui_timerwidget.h
data/: resources.qrc
includes/: Timer.h
old/: Timer.cpp  Timer.h
